objects/custobjb__c.object
<CustomObject>
    <fields>
        <fullName>custfld1__c</fullName>
        <label>custfld1</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>custfld2__c</fullName>
        <label>custfld2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>custfld3__c</fullName>
        <label>custfld3</label>
        <length>19</length>
        <type>Text</type>
    </fields>
</CustomObject>